# cpp-game-framework

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  TILEMAP_HANDOFF.md  compile_commands.json
engine/: CMakeLists.txt
engine/include/: EngineInclude.hpp
engine/include/audio/: AudioBuffer.hpp  AudioBusNode.hpp  AudioInclude.hpp  AudioInstance.hpp  AudioManager.hpp  AudioStream.hpp  IAudioSource.hpp  PlaybackOptions.hpp
engine/include/components/: CameraComponent.hpp  ComponentsInclude.hpp  TagComponent.hpp  TilemapComponent.hpp  TransformComponent.hpp
engine/include/context/: ContextInclude.hpp  GladContext.hpp  GlfwContext.hpp  MiniAudioContext.hpp
engine/include/core/: CoreInclude.hpp  Time.hpp
engine/include/core/file_management/: BinaryFile.hpp  File.hpp  FileManagementInclude.hpp  FileManager.hpp  Folder.hpp  IFileEntry.hpp  ImageFile.hpp  JsonFile.hpp  TextFile.hpp
engine/include/core/input/: Input.hpp  InputAxis.hpp  InputInclude.hpp  KeyCodes.hpp
engine/include/core/logging/: ConsoleSink.hpp  FileSink.hpp  ILogSink.hpp  Logger.hpp  LoggingInclude.hpp
engine/include/core/resource_management/: IResource.hpp  ResourceManagementInclude.hpp  ResourceManager.hpp
engine/include/core/window_management/: Window.hpp  WindowManagementInclude.hpp  WindowManager.hpp
engine/include/ecs/: EcsInclude.hpp  Entity.hpp  Registry.hpp  SparseSet.hpp  View.hpp
engine/include/ecs/registry/: Entity.hpp  EntityHandle.hpp  Registry.hpp  RegistryInclude.hpp  SparseSet.hpp  View.hpp
engine/include/ecs/signals/: Delegate.hpp  Signal.hpp  SignalsInclude.hpp  Sink.hpp
engine/include/graphics/: BatchRenderer.hpp  Color.hpp  GraphicsInclude.hpp  IRenderContext.hpp  Renderer.hpp  TextureAtlas.hpp
engine/include/graphics/gl_wrappers/: GlBuffer.hpp  GlFrameBuffer.hpp  GlLayout.hpp  GlShader.hpp  GlTexture.hpp  GlVertexArray.hpp  GlWrappersInclude.hpp  IGlObject.hpp
engine/include/graphics/tilemap/: RuleTileTemplates.hpp  TilemapInclude.hpp  TilemapManager.hpp  TilemapRenderer.hpp  Tileset.hpp
engine/include/logging/: ConsoleSink.hpp  Debugger.hpp  DebuggerColors.hpp  FileSink.hpp  Logger.hpp  LoggerMacros.hpp  LoggingInclude.hpp
engine/include/math/: CustomHashes.hpp  Mat4.hpp  Math.hpp  MathInclude.hpp  Random.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
engine/include/utils/: Event.hpp  IdIndexedVector.hpp  IdIndexedVextor.hpp  ImageData.hpp  Singleton.hpp  TypeAliases.hpp  TypeRegistery.hpp  UtilsInclude.hpp
engine/include/utils/math/: Mat4.hpp  MathFuncs.hpp  MathInclude.hpp  Random.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
engine/include/window_manager/: IWindow.hpp  Window.hpp  WindowsWindow.hpp
engine/src/audio/: AudioBuffer.cpp  AudioBusNode.cpp  AudioInstance.cpp  AudioManager.cpp  AudioStream.cpp  IAudioSource.cpp
engine/src/context/: GladContext.cpp  GlfwContext.cpp
engine/src/core/: Time.cpp
engine/src/core/file_management/: BinaryFile.cpp  File.cpp  FileManager.cpp  Folder.cpp  IFileEntry.cpp  ImageFile.cpp  JsonFile.cpp  TextFile.cpp
engine/src/core/input/: Input.cpp  InputAxis.cpp
engine/src/core/logging/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp
engine/src/core/resource_management/: ResourceManager.cpp
engine/src/core/window_management/: Window.cpp  WindowManager.cpp
engine/src/ecs/: Registry.cpp
engine/src/ecs/registry/: EntityHandle.cpp  Registry.cpp
engine/src/graphics/: Color.cpp  Renderer.cpp  TextureAtlas.cpp
engine/src/graphics/gl_wrappers/: GlBuffer.cpp  GlFrameBuffer.cpp  GlShader.cpp  GlTexture.cpp  GlVertexArray.cpp
engine/src/graphics/tilemap/: RuleTileTemplates.cpp  TilemapManager.cpp  TilemapRenderer.cpp  Tileset.cpp
engine/src/logging/: ConsoleSink.cpp  Debugger.cpp  FileSink.cpp  Logger.cpp
engine/src/math/: Mat4.cpp  Math.cpp  Random.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
engine/src/utils/math/: Mat4.cpp  MathFuncs.cpp  Random.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
engine/src/window_manager/: Window.cpp  WindowsWindow.cpp
game/: CMakeLists.txt
game/assets/shaders/: PostProcessingShader.glsl  PostProcessingShader_copy.glsl  QuadShader.glsl  TilemapShader.glsl
game/include/: ecs_test.hpp  file_management_test.hpp  piano_demo.hpp  test_funcs.hpp
game/src/: main.cpp
game/src/tests_scenes/: batch_renderer_test.cpp  ecs_test.cpp  file_management_test.cpp  piano_demo.cpp  tilemap_test.cpp
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: stb_image_write.h  stb_impl.cpp  stb_perlin.h
